--- a/carros/templates/carros/description.html
+++ b/carros/templates/carros/description.html
@@ -4,6 +4,16 @@
 
 {% block content %}
 
+ <!-- barra de pesquisa -->
+<div class="row">
+  <div class="col-sm-6">
+    <form action="." method="GET" class="form-inline">
+      <input type="text" id="search" name="search" class="form-control" placeholder="Busca">
+      <input type="submit" class="btn btn-primary" style="margin-left: 10px;" value="OK">
+    </form>
+  </div>
+</div>
+
 <div class="bg-white">
     <div class="pt-6">
       <nav aria-label="Breadcrumb">
