--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,7 +12,14 @@
 <body class="bg-[#C1C1C1]">
   <nav class="flex items-center justify-between p-6 bg-white">
     <a href="/" class="text-xl text-black">CarTradeo</a>
-    <a href="/cars/new" class="text-base text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Criar anúncio</a>
+    {% if request.user.is_authenticated %}
+    <div class="flex items-center gap-2">
+      <a href="/logout/" class="text-base text-sky-500 border border-1 border-sky-600 bg-white hover:bg-sky-600 hover:text-white transition-colors px-4 py-2 rounded-lg">Sair</a>
+      <a href="/cars/new/" class="text-base text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Criar anúncio</a>
+    </div>
+    {% else %}
+      <a href="/login/" class="text-base text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Login</a>
+    {% endif %}
   </nav>
 
   {% block content %}
