--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Listagem de Produto</title>
-</head>
-<body>
+{% extends 'core/base.html' %}
+
+{% block title %}{{ title }}{% endblock title %}
+
+{% block content %}
     <h1> Página de Listagem de Produto</h1>
 
-</body>
-</html>
+
+{% endblock %}
