passando os dados do banco de dados para a plp

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,5 +27,15 @@
 
   {% block scripts %}
   {% endblock %}
+  <footer class="py-6 px-6 flex justify-between bg-white">
+    <div class="w-2/3 pr-10">
+      <h3 class="ab-5 font-semibold font-style italic text-black-400"> CarTradeo </h3>
+    </div>  
+    <div class="w-3/3">
+      <a href="" class="text-base text-gray-300 bg-gray-300 px-4 py-2 rounded-lg"> _______________ </a>
+    </div>
+  </footer>
 </body>
+
+
 </html>
