--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -5,5 +5,26 @@
 {% block content %}
     <h1> Página de Listagem de Produto</h1>
 
+    <div class=""mt-6 px-6 py="12 bg-gray-100 rouded-xl">
+        
+        <div class="grid grid-cols-3 gap-3">
+            {% for car in cars %}
+            <div>
+                <a href="#">
+                    <div>
+                        <img src="{{ car.image.url }}" class="rounded-t-xl">
+                    </div>
+
+                    <div class="p-6 bg-white rounded-b-xl">
+                        <h2 class="text-2xl"> {{ car.car_model }} </h2>
+                        <p class="text-black-500"> Preço: {{car.price}} </p>
+                    </div>
+                    </a>
+
+            </div>
+            {% endfor %}
+            
+        </div>
+    </div>
 
 {% endblock %}
