--- a/carros/templates/carros/description.html
+++ b/carros/templates/carros/description.html
@@ -5,14 +5,29 @@
 {% block content %}
 
  <!-- barra de pesquisa -->
-<div class="row">
-  <div class="col-sm-6">
-    <form action="." method="GET" class="form-inline">
-      <input type="text" id="search" name="search" class="form-control" placeholder="Busca">
-      <input type="submit" class="btn btn-primary" style="margin-left: 10px;" value="OK">
-    </form>
+<!-- template -->
+<div class="container mx-auto p-4">
+  <form class="w-full">
+    <input type="text" name="search" placeholder="Pesquisa" value="{{ search }}" class="w-full p-2 rounded border-2 border-gray-300">
+    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+      Pesquisar
+    </button>
+  </form>
+  <div class="py-4">
+    {% if carros %}
+      <h2 class="text-2xl font-bold mb-4">Foram encontrados {{ carros.count }} carros:</h2>
+      <ul>
+        {% for carro in carros %}
+          <li>{{ carro.car_model }}</li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p>Não foram encontrados carros com esse nome.</p>
+    {% endif %}
   </div>
 </div>
+
+
 
 <div class="bg-white">
     <div class="pt-6">
