--- a/carros/templates/carros/description.html
+++ b/carros/templates/carros/description.html
@@ -4,28 +4,30 @@
 
 {% block content %}
 
- <!-- barra de pesquisa -->
-<!-- template -->
-<div class="container mx-auto p-4">
-  <form class="w-full">
-    <input type="text" name="search" placeholder="Pesquisa" value="{{ search }}" class="w-full p-2 rounded border-2 border-gray-300">
-    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-      Pesquisar
-    </button>
-  </form>
-  <div class="py-4">
-    {% if carros %}
-      <h2 class="text-2xl font-bold mb-4">Foram encontrados {{ carros.count }} carros:</h2>
-      <ul>
-        {% for carro in carros %}
-          <li>{{ carro.car_model }}</li>
-        {% endfor %}
-      </ul>
-    {% else %}
-      <p>Não foram encontrados carros com esse nome.</p>
-    {% endif %}
+  <!-- barra de pesquisa -->
+  <div class="container mx-auto p-4">
+    <form class="w-full">
+      <input type="text" name="search" placeholder="Pesquisar" value="{{ request.GET.search }}" class="w-full p-2 rounded border-2 border-gray-300">
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        Pesquisar
+      </button>
+    </form>
+    <div class="py-4">
+      {% if cars %}
+        <h2 class="text-2xl font-bold mb-4">Foram encontrados {{ cars.count }} carros:</h2>
+        <ul>
+          {% for carro in cars %}
+            <li>{{ carro.car_model }}</li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>Não foram encontrados carros com esse nome.</p>
+      {% endif %}
+    </div>
   </div>
-</div>
+
+{% endblock content %}
+
 
 
 
