--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -3,6 +3,7 @@
 {% block title %}{{ title }}{% endblock title %}
 
 {% block content %}
+
     <h1> Página de Listagem de Produto</h1>
 
     <div class=""mt-6 px-6 py="12 bg-gray-100 rouded-xl">
@@ -10,7 +11,7 @@
         <div class="grid grid-cols-3 gap-3">
             {% for car in cars %}
             <div>
-                <a href="#">
+                <a href="{% url 'carros:pdp' car.id %}">
                     <div>
                         <img src="{{ car.image.url }}" class="rounded-t-xl">
                     </div>
@@ -19,12 +20,10 @@
                         <h2 class="text-2xl"> {{ car.car_model }} </h2>
                         <p class="text-black-500"> Preço: {{car.price}} </p>
                     </div>
-                    </a>
+                </a>
 
             </div>
-            {% endfor %}
-            
+            {% endfor %}   
         </div>
     </div>
-
 {% endblock %}
