Ajeitar erro de imagem sem carro

--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="mx-auto px-6 max-w-7xl my-10">
-    <h1 class="text-3xl mb-4">Produtos</h1>
+    <h1 class="text-3xl mb-4">Carros</h1>
 
     <div class=""mt-6 px-6 py="12 bg-gray-100 rouded-xl">
         
