--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,6 +13,10 @@
   <header class="bg-white">
     <nav class="flex items-center justify-between py-4 px-6 max-w-7xl mx-auto">
       <a href="/" class="text-xl text-black">CarTradeo</a>
+      <div>
+        <a href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Carros</a>
+        <!-- <a href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Meus anúncios</a> -->
+      </div>
       {% if request.user.is_authenticated %}
       <div class="flex items-center gap-2">
         <a href="/logout/" class="text-base text-sky-500 border border-1 border-sky-600 bg-white hover:bg-sky-500 hover:text-white transition-colors px-4 py-2 rounded-lg">Sair</a>
