--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -12,7 +12,7 @@
 </div>
 <div class="my-16">
   <div class="mx-auto px-6 max-w-7xl">
-    <h2 class="text-3xl mb-4">Produtos</h2>
+    <h2 class="text-3xl mb-4">Carros</h2>
 
     <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
       <a href="#" class="group">
