--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -17,7 +17,7 @@
                     </div>
 
                     <div class="p-6 bg-white rounded-b-xl">
-                        <h2 class="text-xl">{{ car.car_model }} - {{ car.brand }}</h2>
+                        <h2 class="text-xl">{{ car.brand }} {{ car.car_model }}</h2>
                         <p class="text-black-500 mt-10 text-3xl text-bold">R$ {{ car.price }}</p>
                         <div class="w-full flex justify-between mt-2">
                             <span class="text-gray-400">{{ car.year }}</span>
