--- a/carros/templates/carros/paginadedescricao.html
+++ b/carros/templates/carros/paginadedescricao.html
@@ -6,20 +6,89 @@
 {% block content %}
 
 <div class=" grid grid-cols-5 gap-6">
-    <div class="col-span-3">
-      <img src=" {{ car.image.url}}" class="rounded-xl">
-  </div>
+  
 
   <div class=" col-span-2 p-6 bg-gray-100 rounded-xl">
-    <h1 class="mb-6 text-3xl"> {{ car.car_model }}</h1>
 
-    <p class="text-gray-500" <strong> Preço: </strong> {{car.price}} </p>
-    <p class="text-gray-500" <strong> Marca: </strong> {{car.brand}} </p>
-    <p class="text-gray-500" <strong> Ano: </strong> {{car.year}} </p>
-    <p class="text-gray-500" <strong> Cor: </strong> {{car.color}} </p>
-    <p class="text-gray-500" <strong> Tipo: </strong> {{car.type}} </p>
-    <p class="text-gray-500" <strong> Descrição: </strong> {{car.Description}} </p>
+    <div class="bg-white">
+      <div class="pt-6">
+        
     
+        <!-- Image gallery -->
+        <div class="mx-auto mt-6 max-w-2xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:gap-x-8 lg:px-8">
+         
+          <div class="hidden lg:grid lg:grid-cols-1 lg:gap-y-8">
+            <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
+              <img src=" {{ car.image.url}}" class="rounded-xl" alt="Model wearing plain black basic tee." class="h-full w-full object-cover object-center">
+            </div>
+          </div>
+          
+        </div>
+    
+        <!-- Product info -->
+        <div class="mx-auto max-w-2xl px-4 pb-16 pt-10 sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8 lg:px-8 lg:pb-24 lg:pt-16">
+          <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
+            <h2 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">{{ car.car_model }}</h2>
+            <h4 class="text-2xl font-bold tracking-tight text-gray-600 sm:text-3xl">Marca: </strong> {{car.brand}}</h4>
+          </div>
+    
+          <!-- Options -->
+          <div class="mt-4 lg:row-span-3 lg:mt-0">
+            <h2 class="sr-only">Product information</h2>
+            <p class="text-3xl tracking-tight text-gray-900">Preço: </strong></p>
+            <p class="text-3xl tracking-tight text-gray-900">{{car.price}} R$</p>
 
-  </div>
+    
+    
+              <button type="submit" class="mt-10 flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Negociar com Vendedor</button>
+            </form>
+          </div>
+    
+          <div class="py-10 lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pb-16 lg:pr-8 lg:pt-6">
+            <!-- Detalhes -->
+            <div>
+              <!-- Ano -->
+              <div class="space-y-6">
+                <h3 class="text-sm font-medium text-gray-900">Ano: </h3>
+              </div>
+    
+              <div class="space-y-6">
+                <p class="text-base text-gray-900">{{car.color}} </p>
+              </div>
+
+              <!-- Tipo -->
+              <div class="space-y-6">
+                <h3 class="text-sm font-medium text-gray-900">Tipo: </h3>
+              </div>
+    
+              <div class="space-y-6">
+                <p class="text-base text-gray-900">{{car.type}}</p>
+              </div>
+
+              <!-- Cor -->
+              <div class="space-y-6">
+                <h3 class="text-sm font-medium text-gray-900">Cor: </h3>
+              </div>
+    
+              <div class="space-y-6">
+                <p class="text-base text-gray-900">{{car.year}}</p>
+              </div>
+
+               <!-- Descrição -->
+              <div class="space-y-6">
+                <h3 class="text-sm font-medium text-gray-900">Descrição: </h3>
+              </div>
+    
+              <div class="space-y-6">
+                <p class="text-base text-gray-900">{{car.Description}}</p>
+              </div>
+            </div>
+    
+            
+    
+            
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
