--- a/carros/templates/carros/paginadedescricao.html
+++ b/carros/templates/carros/paginadedescricao.html
@@ -1,7 +1,7 @@
 
 {% extends 'core/base.html' %}
 
-{% block title %}{{ title }}{% endblock title %}
+{% block title %}{{ car.brand }}{% endblock title %}
 \\ cadastrar o title na view
 {% block content %}
 
