mandando a página de anuncios e os metodos de visualizar e deletar anuncio

--- a/carros/templates/carros/paginadedescricao.html
+++ b/carros/templates/carros/paginadedescricao.html
@@ -24,7 +24,8 @@
           <strong class="text-2xl">{{ car.car_model }}</strong>
         </div>
         <div class="flex flex-col">
-          <span class="text-[12px] text-gray-400">Ano</span>
+          <span class="text-[12px] text-gray-400">Ano</spa
+            n>
           <strong class="text-2xl">{{ car.year }}</strong>
         </div>
         <div class="flex flex-col">
