--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -17,19 +17,19 @@
     <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3">
       <a href="/cars/plp?brand=marca1" class="group">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8">
-          <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="https://www.pixel-creation.com/wp-content/uploads/ferrari-s-p-a-is-an-italian-sports-car-manufacturer-based-in.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
       </a>
 
       <a href="/cars/plp?brand=marca2" class="group">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8">
-          <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-02.jpg" alt="Olive drab green insulated bottle with flared screw lid and flat top." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="https://th.bing.com/th/id/R.aedc3715b1ab230efc9821c475c5e2d4?rik=M1zOhw3wvEZHrA&pid=ImgRaw&r=0" alt="Olive drab green insulated bottle with flared screw lid and flat top." class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
       </a>
 
       <a href="/cars/plp?brand=marca3" class="group">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8">
-          <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-03.jpg" alt="Person using a pen to cross a task off a productivity paper card." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="https://tvoe-avto.com/wp-content/uploads/mercedes-benz-logo-vector-symbol-three-pointed-star-1024x1024.jpg" alt="Person using a pen to cross a task off a productivity paper card." class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
       </a>
       <!-- More products... -->
