--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -11,17 +11,17 @@
 
     <div class="mb-5">
       <label class="text-black">Nome de usuário</label>
-      <input type="text" name="username" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
+      <input id='input-username' type="text" name="username" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
     </div>
 
     <div class="mb-5">
       <label class="text-black">Senha</label>
-      <input type="password" name="password1" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
+      <input id='input-password' type="password" name="password1" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
     </div>
 
     <div class="mb-5">
       <label class="text-black">Repetir senha</label>
-      <input type="password" name="password2" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
+      <input id='input-repassword' type="password" name="password2" class="w-full mt-2 px-4 py-2 rounded-xl border border-2 border-gray-400">
     </div>
     {% if form.errors %}
       {% for key, value in form.errors.items %}
@@ -29,7 +29,7 @@
       {% endfor %}
     {% endif %}
 
-    <button class="w-full text-base text-white mt-4 bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Registrar</button>
+    <button id='cadastro' class="w-full text-base text-white mt-4 bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Registrar</button>
 
     <a class="mt-6 flex justify-center" href="/login/">Já possui uma conta? Faça login</a>
   </form>
