--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,8 +6,8 @@
 <div class="bg-sky-500 h-[240px] w-full flex justify-center items-end">
   <form method="POST" action="." class="bg-white h-[80px] mb-[-20px] w-full max-w-3xl rounded-lg flex items-center gap-4 p-4">
     {% csrf_token %}
-    <input type="text" name="search" id="search" placeholder="Procure por uma marca" class="flex-1 h-full px-4 py-2 rounded-xl border border-2 border-gray-400">
-    <button type="submit" href="#" class="text-lg text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-3 rounded-lg">Pesquisar</button>
+    <input  type="text" name="search" id="search" placeholder="Procure por um carro" class="flex-1 h-full px-4 py-2 rounded-xl border border-2 border-gray-400">
+    <button id="confirm-search"type="submit" href="#" class="text-lg text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-3 rounded-lg">Pesquisar</button>
   </form>
 </div>
 <div class="my-16">
