--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,7 +2,33 @@
 
 {% block content %}
 <div class="flex flex-col justify-center items-center py-6">
-  <h1>Chat</h1>
+  <div class="text-center mb-4">
+    <h1 class="text-2xl lg:text-3xl text-black">{{ car.name }}</h1>
+    {% if request.user == car.created_by %}
+      <p class="text-black mt-2">Você está vendendo esse produto.</p>
+    {% else %}
+      <p class="text-black mt-2">Vendedor: {{ car.created_by.username }}</p>
+    {% endif %}
+  </div>
+
+  <div class="w-full max-w-[500px] mx-4 mx-auto p-4 bg-white rounded-xl">
+    <div class="chat-messages space-y-3" id="chat-messages">
+      {% for message in messages %}
+        <div class="p-4 bg-gray-200 rounded-xl">
+          <p class="font-semibold">{{ message.user }}</p>
+          <p>{{ message.content }}</p>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+
+  <div class="w-full max-w-[500px] mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+    <form method="POST" action="." class="flex">
+      <input type="text" name="content" class="flex-1 mr-3 outline-none" placeholder="Your message..." id="chat-message-input">
+
+      <button class="px-5 py-3 rounded-xl text-white bg-sky-500 hover:bg-sky-600 transition-colors " id="chat-message-submit">Submit</button>
+    </form>
+  </div>
 </div>
 {% endblock %}
 
