--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,7 +21,7 @@
       <div class="flex items-center gap-2">
         <a id="sairlogout"href="/logout/" class="text-base text-sky-500 border border-1 border-sky-600 bg-white hover:bg-sky-500 hover:text-white transition-colors px-4 py-2 rounded-lg">Sair</a>
         <a id="criar-anuncios" href="/cars/new/" class="text-base text-white border border-1 border-sky-500 bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Criar anúncio</a>
-        <a href="/my-ads/" class="text-base text-sky-500 border border-1 border-sky-600 bg-white hover:bg-sky-500 hover:text-white transition-colors px-4 py-2 rounded-lg">Meus Anúncios</a>
+        <a id="botao-meus-anuncios" href="/my-ads/" class="text-base text-sky-500 border border-1 border-sky-600 bg-white hover:bg-sky-500 hover:text-white transition-colors px-4 py-2 rounded-lg">Meus Anúncios</a>
       </div>
       {% else %}
         <a  id='logar' href="/login/" class="text-base text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-2 rounded-lg">Login</a>
