--- a/carros/templates/carros/paginadelistagem.html
+++ b/carros/templates/carros/paginadelistagem.html
@@ -60,7 +60,7 @@
         <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3">
             {% for car in cars %}
             <div>
-                <a href="{% url 'carros:pdp' car.id %}">
+                <a id='descricao-carro' href="{% url 'carros:pdp' car.id %}">
                     <div>
                         <img src="{{ car.image.url }}" class="rounded-t-xl w-full h-[400px]">
                     </div>
