90% DOS TESTES FEITOS

--- a/core/templates/core/my_ads.html
+++ b/core/templates/core/my_ads.html
@@ -2,14 +2,14 @@
 
 {% block content %}
   <div class="container mx-auto mt-8">
-    <h2 class="text-2xl font-bold mb-4">Meus anúncios</h2>
+    <h2 id="confirmar_anuncio" class="text-2xl font-bold mb-4">Meus anúncios</h2>
     {% if cars %}
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         {% for car in cars %}
           <div class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl">
             <img src="{{ car.image.url }}" alt="{{ car.car_model }}" class="w-full h-48 object-cover">
             <div class="p-4">
-              <h3 class="font-bold text-xl mb-2">{{ car.car_model }}</h3>
+              <h3 id="anuncio_exemplo" class="font-bold text-xl mb-2">{{ car.car_model }}</h3>
               <p class="text-gray-700 text-base">{{ car.description }}</p>
               <p class="text-gray-700 text-base">{{ car.brand }} - {{ car.year }}</p>
               <p class="text-gray-700 text-base">{{ car.price }}</p>
@@ -35,7 +35,7 @@
                     </svg>
                   </div>
                 </div>
-                <p class="pb-3">Tem certeza de que deseja excluir esteanúncio?</p>
+                <p class="pb-3">Tem certeza de que deseja excluir este anúncio?</p>
                 <div class="flex justify-end pt-2">
                 <form action="{% url 'delete_car' pk=car.pk %}" method="POST">
                 {% csrf_token %}
@@ -50,7 +50,7 @@
                 </div>
                 {% endfor %}
                 {% else %}
-                <p>Você ainda não tem nenhum anúncio. <a href="#">Crie um agora</a>.</p>
+                <p id="mensagem_sem_anuncio">Você ainda não tem nenhum anúncio. <a href="#">Crie um agora</a>.</p>
                 {% endif %}
                 
                   </div>
