--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,7 +14,7 @@
     <nav class="flex items-center justify-between py-4 px-6 max-w-7xl mx-auto">
       <a id="home"href="/" class="text-xl text-black">CarTradeo</a>
       <div>
-        <a href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Carros</a>
+        <a id="filtros" href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Carros</a>
         <!-- <a href="/cars/plp" class="text-base text-sky-500 hover:text-sky-600 transition-colors px-4 py-2 rounded-lg">Meus anúncios</a> -->
       </div>
       {% if request.user.is_authenticated %}
