--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -16,7 +16,7 @@
       {% for message in messages %}
         <div class="p-4 bg-gray-200 rounded-xl">
           <p class="font-semibold">{{ message.user }}</p>
-          <p>{{ message.content }}</p>
+          <p id="mensagem_exemplo">{{ message.content }}</p>
         </div>
       {% endfor %}
     </div>
@@ -24,6 +24,7 @@
 
   <div class="w-full max-w-[500px] mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
     <form method="POST" action="." class="flex">
+    {%csrf_token%}
       <input type="text" name="content" class="flex-1 mr-3 outline-none" placeholder="Your message..." id="chat-message-input">
 
       <button class="px-5 py-3 rounded-xl text-white bg-sky-500 hover:bg-sky-600 transition-colors " id="chat-message-submit">Submit</button>
@@ -46,12 +47,12 @@
     const data = JSON.parse(event.data)
 
     if (data.message) {
-      let html = `
+      let html =`
         <div class="p-4 bg-gray-200 rounded-xl">
           <p class="font-semibold">${data.buyer}</p>
-          <p>${data.message}</p>
-        </div>
-      `
+          <p id="mensagem_exemplo">${data.message}</p>
+        </div>`
+      
       document.querySelector('#chat-messages').innerHTML += html
     } else {
       alert('Message was empty.')
