--- a/carros/templates/carros/paginadedescricao.html
+++ b/carros/templates/carros/paginadedescricao.html
@@ -11,7 +11,7 @@
     <div>
       <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">{{car.brand}} {{car.car_model}}</h1>
 
-      <p class="mt-4 text-base text-gray-900">{{ car.description }}</p>
+      <p id="descricao_descricao" class="mt-4 text-base text-gray-900">{{ car.description }}</p>
 
       <div class="grid grid-cols-3 gap-4 my-9">
         <div class="flex flex-col">
@@ -63,7 +63,7 @@
       <form action="{% url 'carros:finalize' car.id %}" method="post" class="inline">
         {% csrf_token %}
         <button type="submit"
-          class="block mt-10 text-base text-center text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-3 w-full rounded-lg">Marcar
+          id="marcar_vendido" class="block mt-10 text-base text-center text-white bg-sky-500 hover:bg-sky-600 transition-colors px-4 py-3 w-full rounded-lg">Marcar
           como Vendido</button>
       </form>
 
@@ -71,7 +71,7 @@
 
       <!-- Adição da tag vermelha para carros vendidos -->
       {% if car.is_sold %}
-      <span class="mt-4 px-2 py-1 text-xs text-white bg-red-500 rounded-full">Vendido</span>
+      <span id="vendido" mt-4 px-2 py-1 text-xs text-white bg-red-500 rounded-full">Vendido</span>
       {% endif %}
 
     </div>
