--- a/core/templates/core/chats.html
+++ b/core/templates/core/chats.html
@@ -16,7 +16,7 @@
 
             <div class="p-4 bg-white rounded-b-xl"> 
               <h2 class="text-2xl mb-3">{{ chat.car.name }}</h2>
-              <p>
+              <p id="conversante">
                 {% if request.user == chat.buyer %}
                   Vendedor: {{ chat.seller.username }}
                 {% else %}
