--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% block title%}Chat{% endblock title %}
 
 {% block content %}
 <div class="flex flex-col justify-center items-center py-6">
@@ -11,7 +12,7 @@
     {% endif %}
   </div>
 
-  <div class="w-full max-w-[500px] mx-4 mx-auto p-4 bg-white rounded-xl">
+  <div class="w-full max-w-[500px] mx-4 mx-auto p-4 bg-white rounded-xl max-h-[600px] overflow-y-auto">
     <div class="chat-messages space-y-3" id="chat-messages">
       {% for message in messages %}
         <div class="p-4 bg-gray-200 rounded-xl">
@@ -24,19 +25,31 @@
 
   <div class="w-full max-w-[500px] mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
     <form method="POST" action="." class="flex">
-    {%csrf_token%}
+      {% csrf_token %}
       <input type="text" name="content" class="flex-1 mr-3 outline-none" placeholder="Your message..." id="chat-message-input">
+      <input type="text" name="user" hidden id="chat-user-name">
+      <input type="text" name="chat" hidden id="chat-id">
 
       <button class="px-5 py-3 rounded-xl text-white bg-sky-500 hover:bg-sky-600 transition-colors " id="chat-message-submit">Submit</button>
     </form>
   </div>
 </div>
 {% endblock %}
-
 {% block scripts %}
 {{ chat.id|json_script:"json-chatid" }}
 {{ request.user.username|json_script:"json-buyer" }}
 
+<script>
+  const username = JSON.parse(document.getElementById('json-buyer').textContent)
+  const chatId = JSON.parse(document.getElementById('json-chatid').textContent)
+
+  const input = document.querySelector('#chat-user-name')
+  const chat = document.querySelector('#chat-id')
+
+  input.value = username;
+  chat.value = chatId;
+</script>
+<!-- 
 <script>
   const chatId = JSON.parse(document.getElementById('json-chatid').textContent)
   const buyer = JSON.parse(document.getElementById('json-buyer').textContent)
@@ -57,8 +70,6 @@
     } else {
       alert('Message was empty.')
     }
-
-    console.log({ data })
   }
   
   chatSocket.onclose = (event) => {
@@ -81,5 +92,5 @@
 
     return false
   }
-</script>
-{% endblock %}
+</script> -->
+<!-- {% endblock %}
